@@ -1,5 +1,10 @@
 2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
+	* automake/compile.am: Add $(ARCH)/$(dirstamp) rules.
+	* wrapup/Makefile.am: Reflect $(dirstamp) changes.
+
+2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
 	* Makefile.am: Add $(dirstamp) to preinstallation rules.
 
 2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
